--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ rdoc
 # jeweler generated
 pkg
 
-# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
+# Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore:
 #
 # * Create a file at ~/.gitignore
 # * Include files you want ignored
@@ -48,3 +48,5 @@ pkg
 
 # for RVM
 .rvmrc
+
+.rbenv-gemsets
